force-app/main/default/objects/custom_create259__c/custom_create259__c.object-meta.xml
<CustomObject>
    <label>Custom created object259</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects259</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>