force-app/main/default/objects/custom_create259__c/fields/custom_create_259field525__c.field-meta.xml
<CustomField>
    <fullName>custom_create_259field525__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 259field525</label>
    <type>Checkbox</type>
</CustomField>